--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.19.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lazy-load-image-component": "^1.4.1",
     "uikit": "^3.3.1",
     "uikit-ssr": "git+https://github.com/dasdeck/uikit-ssr.git"
   },
